--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset=utf-8 />
-  <title>GOt PPF?</title>
+  <title>GOt sentence?</title>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="public/quojs.js"></script>
